--- a/public/index.html
+++ b/public/index.html
@@ -1,119 +1,75 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>📸 Chia sẻ Ảnh & Video</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>📸 Chia sẻ Ảnh & Video</title>
+  <link rel="stylesheet" href="style.css">
+  <style>
+    #adminControls {
+      text-align: center;
+      margin-bottom: 15px;
+    }
+    #adminControls button {
+      margin: 0 5px;
+      padding: 6px 12px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+    #loginBtn {
+      background: #007bff;
+      color: white;
+    }
+    #logoutBtn {
+      background: #dc3545;
+      color: white;
+    }
+  </style>
 </head>
 <body>
-    <header>
-        <h1>📸 Chia sẻ Ảnh & Video</h1>
-        <p>Tải lên và chia sẻ khoảnh khắc của bạn!</p>
-    </header>
+  <header>
+    <h1>📸 Chia sẻ Ảnh & Video</h1>
+    <p>Tải lên và chia sẻ khoảnh khắc của bạn!</p>
+  </header>
 
-    <main>
-        <form id="uploadForm" action="upload.php" method="POST" enctype="multipart/form-data">
-            <input type="file" id="media" name="media" accept="image/jpeg,image/png,image/gif,image/webp,video/mp4,video/webm,video/ogg">
-            <button type="submit" id="uploadBtn">📤 Tải lên</button>
-        </form>
+  <main>
+    <div id="adminControls">
+      <button id="loginBtn">🔑 Đăng nhập Admin</button>
+      <button id="logoutBtn" style="display:none;">🚪 Đăng xuất</button>
+    </div>
 
-        <div id="notification" style="text-align: center; margin-bottom: 15px;"></div>
+    <form id="uploadForm" enctype="multipart/form-data">
+      <input type="file" id="media" name="media" accept="image/jpeg,image/png,image/gif,image/webp,video/mp4,video/webm,video/ogg">
+      <button type="submit" id="uploadBtn">📤 Tải lên</button>
+    </form>
 
-        <h2>📷 Ảnh</h2>
-        <div id="imageContainer" class="gallery"></div>
+    <div id="statusMessage" style="text-align:center; margin-bottom:15px;"></div>
 
-        <h2>🎥 Video</h2>
-        <div id="videoContainer" class="gallery"></div>
-    </main>
+    <h2>📷 Ảnh</h2>
+    <div id="imageContainer" class="gallery"></div>
 
-    <footer>
-        <p>Made with ❤️ by Duc</p>
-    </footer>
+    <h2>🎥 Video</h2>
+    <div id="videoContainer" class="gallery"></div>
+  </main>
 
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const form = document.getElementById('uploadForm');
-            const fileInput = document.getElementById('media');
-            const uploadBtn = document.getElementById('uploadBtn');
-            const imageContainer = document.getElementById('imageContainer');
-            const videoContainer = document.getElementById('videoContainer');
-            const statusMessage = document.getElementById('notification');
+  <footer>
+    <p>Made with ❤️ by Duc</p>
+  </footer>
 
-            // Load danh sách file
-            function loadFiles() {
-                fetch('list.php')
-                    .then(res => {
-                        if (!res.ok) throw new Error(`Lỗi HTTP: ${res.status}`);
-                        return res.json();
-                    })
-                    .then(files => {
-                        imageContainer.innerHTML = '';
-                        videoContainer.innerHTML = '';
-                        files.forEach(file => {
-                            if (file.type === 'image') {
-                                const img = document.createElement('img');
-                                img.src = file.url;
-                                img.alt = 'Ảnh chia sẻ';
-                                img.classList.add('media-item');
-                                imageContainer.appendChild(img);
-                            } else if (file.type === 'video') {
-                                const video = document.createElement('video');
-                                video.src = file.url;
-                                video.controls = true;
-                                video.classList.add('media-item');
-                                videoContainer.appendChild(video);
-                            }
-                        });
-                    })
-                    .catch(err => {
-                        console.error('Lỗi khi tải danh sách:', err);
-                        statusMessage.textContent = '❌ Lỗi khi tải danh sách!';
-                        statusMessage.style.color = 'red';
-                    });
-            }
+  <!-- Modal đăng nhập Admin -->
+  <div id="loginModal" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.5); justify-content:center; align-items:center;">
+    <div style="background:#fff; padding:20px; border-radius:8px; max-width:300px; width:100%;">
+      <h3>Đăng nhập Admin</h3>
+      <input id="username" placeholder="Username" style="width:100%; margin-bottom:10px;">
+      <input id="password" placeholder="Password" type="password" style="width:100%; margin-bottom:10px;">
+      <div style="text-align:right;">
+        <button id="cancelLogin" style="margin-right:5px;">Hủy</button>
+        <button id="submitLogin">Đăng nhập</button>
+      </div>
+    </div>
+  </div>
 
-            // Xử lý upload
-            form.addEventListener('submit', (e) => {
-                e.preventDefault();
-                if (!fileInput.files.length) {
-                    statusMessage.textContent = '⚠️ Vui lòng chọn tệp!';
-                    statusMessage.style.color = 'orange';
-                    return;
-                }
-
-                const formData = new FormData(form);
-                uploadBtn.disabled = true;
-                uploadBtn.textContent = 'Đang tải...';
-                statusMessage.textContent = '⏳ Đang tải lên...';
-                statusMessage.style.color = 'blue';
-
-                fetch('upload.php', { method: 'POST', body: formData })
-                    .then(res => res.json())
-                    .then(data => {
-                        if (data.success) {
-                            statusMessage.textContent = '✅ Tải lên thành công!';
-                            statusMessage.style.color = 'green';
-                            fileInput.value = '';
-                            loadFiles();
-                        } else {
-                            throw new Error(data.error);
-                        }
-                    })
-                    .catch(err => {
-                        console.error('Lỗi tải lên:', err);
-                        statusMessage.textContent = `❌ ${err.message}`;
-                        statusMessage.style.color = 'red';
-                    })
-                    .finally(() => {
-                        uploadBtn.disabled = false;
-                        uploadBtn.textContent = '📤 Tải lên';
-                    });
-            });
-
-            // Load lần đầu
-            loadFiles();
-        });
-    </script>
+  <script src="script.js"></script>
 </body>
 </html>
